# agent_hpc

./: .gitignore  AGENTS.md  README.md  RESTORE_FROM_GITHUB.md  Snakefile  config.yaml  run_workflow.py
singlecell_workbench/: README.md  pyproject.toml
singlecell_workbench/01_tools/: setup_server_env.sh
singlecell_workbench/config/: default.yaml  project_run.template.yaml
singlecell_workbench/docs/: USAGE.md  WORK_BRIEF.md  samplesheet_contract.md
singlecell_workbench/envs/: environment.server.yml
singlecell_workbench/example_data/minimal_example/: example_manifest.json  run_config.yaml
singlecell_workbench/notebooks/: minimal_example.ipynb
singlecell_workbench/src/singlecell_workbench/: __init__.py  __main__.py  cli.py  config.py  example_data.py  pipeline.py  preflight.py  priors.py  provenance.py  sample_contract.py  schema.py  types.py
singlecell_workbench/src/singlecell_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
singlecell_workbench/templates/: samplesheet.template.tsv
singlecell_workbench/tests/: test_annotation.py  test_cli.py  test_config.py  test_ingest.py  test_pipeline.py  test_preflight.py  test_priors.py  test_qc.py  test_reports.py  test_stats.py
ultimate/: .gitignore  README.md  Snakefile  pyproject.toml  setup.py
ultimate/01_tools/: check_validation_manifests.py  ensure_validation_methods.py  ensure_validation_mvp_artifacts.py  prepare_geo_series_matrix.py  prepare_public_singlecell_manifests.py  run_with_vdj_env.sh  setup_server_env.sh  storage_audit.py  validate_cite_seq_public.py  validate_genotype_demux_demo.py  validate_hto_demux_demo.py  validate_method_tools_scrna.py  validate_methylation_public.py  validate_mtdna_0518.py  validate_multiome_public.py  validate_perturb_seq_demo.py  validate_proteomics_public.py  validate_rnaseq_public.py  validate_scatac_chromvar.py  validate_scatac_public.py  validate_scdna_0518.py  validate_scepi_public.py  validate_scrna_cellchat.py  validate_scrna_nichenet.py  validate_scrna_nsclc.py  validate_spatial_public.py  validate_tabular_public.py  validate_tumor_sc_nsclc.py  validate_vdj_public.py  validation_manifest_utils.py  write_v2_status_report.py  write_v3_3_order_ready_report.py  write_v3_5_intake_ready_report.py  write_v3_status_report.py
ultimate/config/: condarc.mirrors.aliyun.yml  condarc.mirrors.bfsu.yml  condarc.mirrors.sjtu.yml  condarc.mirrors.tuna.yml  default.yaml
ultimate/docs/: CURRENT_STATE.md  MULTIOMICS_IMPLEMENTATION_PLAN.md
ultimate/envs/: environment.browser.yml  environment.core.yml  environment.genome_mtdna.yml  environment.methylation.yml  environment.proteomics.yml  environment.publicdb.yml  environment.rnaseq.yml  environment.scatac.py.yml  environment.scatac.r.yml  environment.scatac_multiome.yml  environment.scrna.full.yml  environment.scrna.heavy.yml  environment.scrna.py.yml  environment.scrna.r.yml  environment.scrna.yml  environment.spatial.py.yml  environment.spatial.r.yml  environment.spatial.yml  environment.vdj.r.yml  environment.vdj.yml  environment.wgcna.yml  environment.workflow.yml
ultimate/scripts/: check_dev_entrypoint.sh
ultimate/scripts/R/: cite_seq_dsb_backend.R  methylation.R  proteomics.R  publicdb.R  rnaseq.R  rnaseq_de_backend.R  scrna.R  scrna_pseudobulk_de_backend.R  single_gene.R  theme_clinical_journal.R  tumor_cnv_copykat.R  wgcna.R
ultimate/slurm/: bulk_validation_suite.sbatch  cite_seq_backend_validation.sbatch  cite_seq_dsb_validation.sbatch  cite_seq_validation.sbatch  download_public_singlecell_data.sbatch  gapfill_specialty_validation.sbatch  genotype_demux_backend_validation.sbatch  hto_demux_backend_validation.sbatch  method_tools_validation.sbatch  mtdna_backend_validation.sbatch  multiome_backend_validation.sbatch  perturb_seq_backend_validation.sbatch  prepare_bulk_public_data.sbatch  proteomics_backend_validation.sbatch  raw_qc_style_demo.sbatch  readiness_refresh.sbatch  scatac_backend_validation.sbatch  scatac_chromvar_validation.sbatch  scdna_backend_validation.sbatch  scdna_validation.sbatch  scepi_backend_validation.sbatch  scrna_cellchat_validation.sbatch  scrna_communication_unified_validation.sbatch  scrna_mvp_validation.sbatch  scrna_nichenet_validation.sbatch  scrna_pseudobulk_de.sbatch  scrna_velocity.sbatch  setup_bulk_envs.sbatch  setup_genome_mtdna_env.sbatch  setup_singlecell_envs.sbatch  singlecell_audit.sbatch  singlecell_validation_suite.sbatch  spatial_backend_validation.sbatch  test_mirror_connectivity.sbatch  test_mirror_matrix.sbatch  tool_trial_batch.sbatch  tumor_sc_backend_validation.sbatch  tumor_sc_copykat_small_validation.sbatch  tumor_sc_maynard_raw_counts.sbatch  tumor_sc_validation.sbatch  (+12 more)
ultimate/src/ultimate/: __main__.py  analysis_levels.py  approval_gate.py  backend_registry.py  batch.py  batch_status.py  bulk.py  cite_seq_backend.py  cli.py  completeness.py  config.py  constants.py  customer_package.py  delivery_check.py  demo.py  genotype_demux_backend.py  handoff_check.py  hto_demux_backend.py  intake.py  job.py  (+31 more)
ultimate/tests/: test_analysis_levels.py  test_backend_registry.py  test_batch.py  test_bulk_v37_algorithms.py  test_cite_seq_backend.py  test_cli.py  test_completeness.py  test_config.py  test_delivery_check.py  test_genotype_demux_backend.py  test_handoff_check.py  test_hto_demux_backend.py  test_job.py  test_method_tools_backend.py  test_mtdna_backend.py  test_multiome_backend.py  test_multiomics_module_contracts.py  test_packaging_stability.py  test_perturb_seq_backend.py  test_pipeline.py  test_preflight.py  test_production_audit.py  test_raw_qc_style.py  test_raw_upstream.py  test_raw_upstream_handoff_templates.py  test_rnaseq_de_backend.py  test_scatac_backend.py  test_scdna_backend.py  test_scepi_backend.py  test_scrna_hardening.py  test_scrna_production_approval.py  test_scrna_smoke.py  test_scrna_velocity_backend.py  test_singlecell_audit.py  test_spatial_backend.py  test_storage_audit.py  test_tool_registry.py  test_triage.py  test_tumor_sc_backend.py  test_v2_status_report.py  (+18 more)
ultimate/workflows/: README.md  raw_qc.smk
(+589 files in other folders)
