[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-bioinfo"
version = "0.1.0"
description = "CLI-first reproducible multi-omics bioinformatics workbench for HPC delivery."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ultimate = "ultimate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ultimate = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
