[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate-bioinfo"
version = "0.1.0"
description = "CLI-first reproducible multi-omics bioinformatics workbench for HPC delivery."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
scrna = [
  "anndata>=0.10",
  "celltypist>=1.6",
  "decoupler>=2.1.6",
  "gseapy>=1.1",
  "h5py>=3.10",
  "leidenalg>=0.10",
  "liana>=1.7.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "python-igraph>=0.11",
  "scanpy>=1.10",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "scrublet>=0.2",
  "seaborn>=0.13",
  "pytest>=8.0",
]

[project.scripts]
ultimate = "ultimate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ultimate = ["templates/*.j2"]

[tool.setuptools.data-files]
"share/ultimate/templates/intake" = ["templates/intake/*"]
"share/ultimate/templates/samples" = ["templates/samples/*"]
"share/ultimate/templates/handoffs/bcl2fastq" = ["templates/handoffs/bcl2fastq/*"]
"share/ultimate/templates/handoffs/bcl_convert" = ["templates/handoffs/bcl_convert/*"]
"share/ultimate/templates/handoffs/bd_rhapsody" = ["templates/handoffs/bd_rhapsody/*"]
"share/ultimate/templates/handoffs/cellranger_arc" = ["templates/handoffs/cellranger_arc/*"]
"share/ultimate/templates/handoffs/cellranger_atac" = ["templates/handoffs/cellranger_atac/*"]
"share/ultimate/templates/handoffs/cellranger_count" = ["templates/handoffs/cellranger_count/*"]
"share/ultimate/templates/handoffs/cellranger_multi" = ["templates/handoffs/cellranger_multi/*"]
"share/ultimate/templates/handoffs/cellranger_vdj" = ["templates/handoffs/cellranger_vdj/*"]
"share/ultimate/templates/handoffs/cite_seq" = ["templates/handoffs/cite_seq/*"]
"share/ultimate/templates/handoffs/clinical_assoc" = ["templates/handoffs/clinical_assoc/*"]
"share/ultimate/templates/handoffs/functional_state" = ["templates/handoffs/functional_state/*"]
"share/ultimate/templates/handoffs/genotype_demux" = ["templates/handoffs/genotype_demux/*"]
"share/ultimate/templates/handoffs/hto_demux" = ["templates/handoffs/hto_demux/*"]
"share/ultimate/templates/handoffs/method_tools" = ["templates/handoffs/method_tools/*"]
"share/ultimate/templates/handoffs/methylation" = ["templates/handoffs/methylation/*"]
"share/ultimate/templates/handoffs/mixcr" = ["templates/handoffs/mixcr/*"]
"share/ultimate/templates/handoffs/mtdna" = ["templates/handoffs/mtdna/*"]
"share/ultimate/templates/handoffs/multiome" = ["templates/handoffs/multiome/*"]
"share/ultimate/templates/handoffs/nfcore_airrflow" = ["templates/handoffs/nfcore_airrflow/*"]
"share/ultimate/templates/handoffs/nfcore_atacseq" = ["templates/handoffs/nfcore_atacseq/*"]
"share/ultimate/templates/handoffs/nfcore_rnafusion" = ["templates/handoffs/nfcore_rnafusion/*"]
"share/ultimate/templates/handoffs/nfcore_rnaseq" = ["templates/handoffs/nfcore_rnaseq/*"]
"share/ultimate/templates/handoffs/nfcore_sarek" = ["templates/handoffs/nfcore_sarek/*"]
"share/ultimate/templates/handoffs/nfcore_scrnaseq" = ["templates/handoffs/nfcore_scrnaseq/*"]
"share/ultimate/templates/handoffs/nfcore_sopa" = ["templates/handoffs/nfcore_sopa/*"]
"share/ultimate/templates/handoffs/nfcore_spatialvi" = ["templates/handoffs/nfcore_spatialvi/*"]
"share/ultimate/templates/handoffs/parse_biosciences" = ["templates/handoffs/parse_biosciences/*"]
"share/ultimate/templates/handoffs/perturb_seq" = ["templates/handoffs/perturb_seq/*"]
"share/ultimate/templates/handoffs/proteomics" = ["templates/handoffs/proteomics/*"]
"share/ultimate/templates/handoffs/publicdb" = ["templates/handoffs/publicdb/*"]
"share/ultimate/templates/handoffs/rnaseq" = ["templates/handoffs/rnaseq/*"]
"share/ultimate/templates/handoffs/scatac" = ["templates/handoffs/scatac/*"]
"share/ultimate/templates/handoffs/scdna" = ["templates/handoffs/scdna/*"]
"share/ultimate/templates/handoffs/scepi" = ["templates/handoffs/scepi/*"]
"share/ultimate/templates/handoffs/scrna" = ["templates/handoffs/scrna/*"]
"share/ultimate/templates/handoffs/single_gene" = ["templates/handoffs/single_gene/*"]
"share/ultimate/templates/handoffs/spaceranger" = ["templates/handoffs/spaceranger/*"]
"share/ultimate/templates/handoffs/spatial" = ["templates/handoffs/spatial/*"]
"share/ultimate/templates/handoffs/tumor_sc" = ["templates/handoffs/tumor_sc/*"]
"share/ultimate/templates/handoffs/vdj" = ["templates/handoffs/vdj/*"]
"share/ultimate/templates/handoffs/wgcna" = ["templates/handoffs/wgcna/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
